# intercom-gamma-analyzer

./: .commit_msg.txt  .coveragerc  .cursorrules  .gitignore  AGENTS.MD  AGENT_COACHING_IMPLEMENTATION_SUMMARY.md  AGENT_LLM_USAGE_MAP.md  AGENT_OUTPUT_VISIBILITY_IMPLEMENTATION.md  AGENT_PERFORMANCE_IMPLEMENTATION_COMPLETE.md  AGENT_REFLECTION_REPORT.md  AGENT_RULES.md  AGGRESSIVE_CLEANUP_PLAN.md  AI_ANALYSIS_SYSTEM_REPORT.md  AI_MODEL_SELECTION_FIX.md  AI_RECOMMENDATIONS_ANALYSIS.md  ALL_FIXES_COMPREHENSIVE_SUMMARY.md  ANALYTICAL_INSIGHTS_IMPLEMENTATION_COMPLETE.md  API_DOCS_REVIEW.md  APP_OVERVIEW.md  AUDIT_TRAIL_IMPLEMENTATION.md  AUDIT_TRAIL_STATUS.md  AUTOMATED_VALIDATION_CHECKLIST_PROPOSAL.md  BEST_PRACTICES_AUDIT_IMPROVEMENTS.md  BUG_FIXES_SUMMARY.md  BUG_PREVENTION_SYSTEM_SUMMARY.md  CANNY_COMPLETE_IMPLEMENTATION.md  CANNY_INTEGRATION_AUDIT.md  CANNY_INTEGRATION_SUMMARY.md  CANNY_QUICK_STATUS.md  CATEGORY_DEEP_DIVE_FIX.md  CHURN_CORRELATION_IMPLEMENTATION.md  CHURN_CORRELATION_RESEARCH.md  CLAUDE_RESEARCH_QUESTIONS.md  CLI_FLAGS_COMPREHENSIVE_AUDIT.md  CLI_FLAGS_UNIFICATION_PLAN.md  CLI_WEB_ALIGNMENT_CHECKLIST.md  COACHING_QUICK_REFERENCE.md  CODERABBIT_REVIEW.md  CODE_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS.md  (+178 more)
config/: analysis_config.yaml  analysis_modes.yaml
deploy/: modal_app.py  modal_setup.md  railway_cron.py  railway_setup.md  railway_web.py
scripts/: analyze_intercom_fields_for_cx_metrics.py  analyze_observability.py  analyze_specific_conversations.py  check_async_patterns.py  check_cli_web_alignment.py  check_double_counting.py  check_imports.py  (+26 more)
(+250 files in other folders)
